Ignore files other than accepted types for image upload, fix save button getting stuck on disabled

--- a/src/app/components/users/users.component.css
+++ b/src/app/components/users/users.component.css
@@ -88,7 +88,7 @@
 .phone {
   height: 36px;
   color: rgba(0, 0, 0, 0.87);
-  margin-right: 20px;
+  margin-right: 16px;
 }
 
 .phone-number {
