--- a/src/styles.scss
+++ b/src/styles.scss
@@ -111,3 +111,8 @@ a {
 .ad-form-label-icon {
   color: rgba(0, 0, 0, 0.74);
 }
+
+.mat-tooltip {
+  padding: 3px 8px;
+  font-size: 11px;
+}
